--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+
 /**
 * Mobile Navigation 
 */
@@ -349,6 +350,50 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
 }
+
+/*--------------------------------------------------------------
+# Side Navigation Menu
+--------------------------------------------------------------*/
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 996;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
 
 /*--------------------------------------------------------------
 # Hero Section
