--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,7 +385,10 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 36px;
+  color: #f1f1f1;
+  background-color: #111111;
+  border: rgb(17, 17, 17, 0);
+  font-size: 30px;
   margin-left: 50px;
 }
 
@@ -393,7 +396,6 @@ h1, h2, h3, h4, h5, h6 {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-
 
 /*--------------------------------------------------------------
 # Hero Section
